Limit ToC to 3 levels

--- a/src/wut-thesis.cls
+++ b/src/wut-thesis.cls
@@ -157,8 +157,8 @@
 \counterwithin{equation}{section}
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
-\setcounter{tocdepth}{5}
-\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
 % List formatting
 \setlist[itemize,1]{topsep=2pt,label=\large$\bullet$, leftmargin=28pt}
 \setlist[itemize,2]{topsep=2pt,leftmargin=18pt}
@@ -503,5 +503,5 @@
     {1.25ex \@plus .25ex}
     {\normalfont\normalsize\bfseries}}
 %\makeatother
-\setcounter{secnumdepth}{4} % how many sectioning levels to assign numbers to
-\setcounter{tocdepth}{4}    % how many sectioning levels to show in ToC
+%\setcounter{secnumdepth}{4} % how many sectioning levels to assign numbers to
+%\setcounter{tocdepth}{4}    % how many sectioning levels to show in ToC
